--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aquí haremos el blogspot</h1>
-        <p>Este es un parrafo</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título del post</h1>
+                <p>Este es un parrafo de inicio donde vamos a explicar cosas</p>
+            </div>
+        </div>
     </body>
 </html>
