--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es el título del post</h1>
                 <p>Este es un parrafo de inicio donde vamos a explicar cosas</p>
+                <p>Este es un parrafo adicional</p>
             </div>
         </div>
     </body>
