--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
                 <h1>Este es el título del post</h1>
                 <p>Este es un parrafo de inicio donde vamos a explicar cosas</p>
                 <p>Este es un parrafo adicional</p>
+                <p>Este es un parrafo adicional más</p>
             </div>
         </div>
     </body>
