--- a/blogpost.html
+++ b/blogpost.html
@@ -7,13 +7,14 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de MAESTROOO</span>
             </div>
             <div id="post">
                 <h1>Este es el título del post</h1>
                 <p>Este es un parrafo de inicio donde vamos a explicar cosas</p>
                 <p>Este es un parrafo adicional</p>
                 <p>Este es un parrafo adicional más</p>
+                <p>Suscribrte y dale like</p>
             </div>
         </div>
     </body>
