--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <div id="post">
                 <h1>Este es el título del post</h1>
                 <p>Este es un parrafo de inicio donde vamos a explicar cosas</p>
+                <p><img src="imagenes/paisaje.jpg" alt=""></p>
                 <p>Este es un parrafo adicional</p>
                 <p>Este es un parrafo adicional más</p>
                 <p>Suscribrte y dale like</p>
